Yash Srivastava intitial comment

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PasswordValidator
-main.class=passwordvalidator.PasswordValidator
+main.class=passwordvalidator.PasswordValidatorOperate
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
